	PR rtl-optimization/45652 	* alias.c (get_reg_base_value): New. 	* rtl.h (get_reg_base_value): Add prototype. 	* sel-sched.c (init_regs_for_mode): Use it.  Don't use registers with 	non-null REG_BASE_VALUE for renaming.

testsuite:
	* gcc.dg/pr45652.c: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@167025 138bc75d-0d04-0410-961f-82ee72b054a4